tests/machine/x/ocaml/dataset_where_filter.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/dataset_where_filter.ml", line 30, characters 4-10:
30 |   ) people;
         ^^^^^^
Error: This expression has type record1 list
       but an expression was expected of type (string * Obj.t) list list
       Type record1 is not compatible with type (string * Obj.t) list 


Context (around line 30):
  28 |       if (Obj.obj (List.assoc "age" person) >= 18) then
  29 |     __res0 := { name = Obj.obj (List.assoc "name" person); age = Obj.obj (List.assoc "age" person); is_senior = (Obj.obj (List.assoc "age" person) >= 60) } :: !__res0;
  30 |   ) people;
  31 | List.rev !__res0)
  32 | 
